syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";

service GreeterService {

  // Unary
  rpc SayHelloToUser (HelloRequest) returns (HelloResponse);

  // Server Streaming
  rpc SayMultipleHelloToUser (HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}